<resources>
    <!-- App Name -->
    <string name="app_name">Shiba Planner</string>

    <string name="beispiel">Beispiel</string>

    <!-- Activity Startbildschirm -->
    <string name="gutenMorgen">Guten Morgen</string>
    <string name="gutenMittag">Guten Mittag</string>
    <string name="gutenAbend">Guten Abend</string>
    <string name="heuteIst">Heute ist der</string>
    <string name="zuEinstellungen">Einstellungen</string>
    <string name="zumKalender">Kalender</string>

    <!-- Activity Terminerstellung -->
    <string name="titel">Titel eingeben</string>
    <string name="ganztaegig">Ganzer Tag</string>
    <string name="zeit">Zeit</string>
    <string name="start">Von</string>
    <string name="am">Am</string>
    <string name="ende">Bis</string>
    <string name="datumFormat">tt.mm.yyyy</string>
    <string name="zeitFormat">HH:mm</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbruch</string>
    <string name="farbewaehlen">Farbe auswählen</string>

    <!-- Activity ein Termin -->
    <string name="bearbeiten">Bearbeiten</string>
    <string name="loeschen">Löschen</string>
    <string name="zurueck">Zurück</string>
    <string name="farbe">Farbe</string>

    <!-- Termin print Text -->
    <string name="terminIstGanztaegig">%1$s findet am %2$s den ganzen Tag lang statt.</string>
    <string name="terminIstNichtGanztaegig">%1$s findet zwischen dem %2$s um %3$s Uhr und dem %4$s um %5$s Uhr statt.</string>
    <string name="terminIstGanztaegigFuerList">Am %2$s ganztägig.</string>
    <string name="terminIstNichtGanztaegigFuerList">Vom %2$s um %3$s Uhr bis zum %4$s um %5$s Uhr.</string>


    <!-- Text für Toast in Terminerstellung -->
    <string name="toastTerminGespeichert">Termin wurde gespeichert</string>
    <string name="toastDatenFalsch">Min. eine Datum- oder Zeitangabe ist falsch!</string>
    <string name="toastTitelFehlt">Bitte Titel eingeben</string>

    <!-- Wochentage für Kalender Activity -->
    <string name="montag">Mo</string>
    <string name="dienstag">Di</string>
    <string name="mittwoch">Mi</string>
    <string name="donnerstag">Do</string>
    <string name="freitag">Fr</string>
    <string name="samstag">Sa</string>
    <string name="sonntag">So</string>

    <!-- Monate für Kalender Activity -->
    <string-array name="monate">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mär</item>
        <item>Apr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Okt</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>

    <!-- Farben für Activitys, je nach Monat andere Farbe -->
    <string-array name="farben">
        <item>#4FC3F7</item>    <!--    Januar    -->
        <item>#4DB6AC</item>    <!--    Februar   -->
        <item>#81C784</item>    <!--    März      -->
        <item>#AED581</item>    <!--    April     -->
        <item>#ead72a</item>    <!--    Mai       -->
        <item>#FFCA28</item>    <!--    Juni      -->
        <item>#FFA726</item>    <!--    Juli      -->
        <item>#FF7043</item>    <!--    August    -->
        <item>#EF5350</item>    <!--    September -->
        <item>#AB47BC</item>    <!--    Oktober   -->
        <item>#7E57C2</item>    <!--    November  -->
        <item>#5C6BC0</item>    <!--    Dezember  -->
    </string-array>
    <string name="title_activity_ein_termin__gui">EinTermin_GUI</string>


</resources>
