<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:background="@drawable/cvf"
    android:orientation="vertical"

    tools:context=".TerminBearbeitung_GUI">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="152dp"

        android:layout_above="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:background="@color/startTransparent" />


    <EditText
        android:id="@+id/txt_Terminbearbeitung_Eingabe_Titel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/btn_zurueckZumKalender"
        android:layout_alignParentStart="true"

        android:layout_marginTop="70dp"
        android:fontFamily="@font/chunkfive"
        android:hint="@string/titel"

        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="@color/weiß"
        android:textColorHint="@color/weiß"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/txt_Terminbearbeitung_Eingabe_Titel"


        android:background="@color/startDatum"
        android:gravity="start"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/zeit"
        android:textColor="@color/weiß"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/switch_Terminbearbeitung_Eingabe_JaNein"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignBottom="@+id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_centerHorizontal="true"

        android:textColor="@color/schwarz" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Beschriftung_Start"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Terminbearbeitung_Eingabe_Datum_Ende"
        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@id/txt_Terminbearbeitung_Eingabe_Datum_Start"

        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/start"
        android:textColor="@color/startDatum"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Eingabe_Datum_Start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Terminbearbeitung_Eingabe_Datum_Ende"
        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@id/txt_Terminbearbeitung_Eingabe_Datum_Start"

        android:gravity="center"
        android:hint="@string/datumFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Eingabe_Zeit_Start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Terminbearbeitung_Eingabe_Zeit_Ende"
        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-50dp"
        android:layout_toEndOf="@id/txt_Terminbearbeitung_Eingabe_Datum_Start"

        android:gravity="center"
        android:hint="@string/zeitFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Beschriftung_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-90dp"
        android:layout_toStartOf="@id/txt_Terminbearbeitung_Eingabe_Datum_Ende"

        android:paddingStart="20dp"
        android:paddingEnd="0dp"

        android:text="@string/ende"
        android:textColor="@color/startDatum"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Eingabe_Datum_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-90dp"

        android:gravity="center"
        android:hint="@string/datumFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Terminbearbeitung_Eingabe_Zeit_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-90dp"
        android:layout_toEndOf="@id/txt_Terminbearbeitung_Eingabe_Datum_Ende"

        android:gravity="center"
        android:hint="@string/zeitFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_Terminbearbeitung_Abbrechen"

        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/btn_Terminbearbeitung_Speichern"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@color/startDatum"

        android:text="@string/speichern"
        android:textColor="@color/weiß"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_bearbeitung_oeffne_ColorPicker"

        android:layout_width="28dp"
        android:layout_height="27dp"

        android:layout_alignBottom="@id/txt_bearbeitung_farbeauswaehlen"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@id/txt_bearbeitung_farbeauswaehlen"
        android:background="@color/startDatum"/>

    <TextView
        android:id="@+id/txt_bearbeitung_farbeauswaehlen"

        android:layout_width="289dp"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Terminbearbeitung_Beschriftung_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-147dp"

        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/farbe"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

</RelativeLayout>