<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:background="@drawable/cvf"
    android:orientation="vertical"

    tools:context=".Termindetails">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/startTransparent" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Titel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/btn_zurueckZumKalender"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/chunkfive"

        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:text="@string/beispiel"
        android:textColor="@color/weiß"
        android:textSize="35sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt_Ein_Termin_Ganztaegig"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/txt_Ein_Termin_Titel"


        android:background="@color/startDatum"
        android:gravity="end"
        android:padding="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/ganztaegig"
        android:textColor="@color/weiß"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Beschriftung_Start"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Ein_Termin_Beschriftung_Ende"
        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@id/txt_Ein_Termin_Datum_Start"

        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/start"
        android:textColor="@color/startDatum"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Datum_Start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Ein_Termin_Datum_Ende"
        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@id/txt_Ein_Termin_Datum_Start"

        android:gravity="center"
        android:hint="@string/datumFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Zeit_Start"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/txt_Ein_Termin_Zeit_Ende"
        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-50dp"
        android:layout_toEndOf="@id/txt_Ein_Termin_Datum_Start"

        android:gravity="center"
        android:hint="@string/zeitFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Beschriftung_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-90dp"
        android:layout_toStartOf="@id/txt_Ein_Termin_Datum_Ende"

        android:paddingStart="20dp"
        android:paddingEnd="0dp"

        android:text="@string/ende"
        android:textColor="@color/startDatum"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Datum_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-90dp"

        android:gravity="center"
        android:hint="@string/datumFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_Ein_Termin_Zeit_Ende"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-90dp"
        android:layout_toEndOf="@id/txt_Ein_Termin_Datum_Ende"

        android:gravity="center"
        android:hint="@string/zeitFormat"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_Ein_Termin_Bearbeiten"

        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@id/btn_Ein_Termin_Loeschen"

        android:background="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/btn_Ein_Termin_Loeschen"

        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:background="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/btn_zurueckZumKalender"

        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/btn_farbe"

        android:layout_width="28dp"
        android:layout_height="27dp"

        android:layout_alignBottom="@id/txt_farbe"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@id/txt_farbeauswaehlen"
        android:background="@color/startDatum"/>

    <TextView
        android:id="@+id/txt_farbe"

        android:layout_width="289dp"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/txt_Ein_Termin_Ganztaegig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-147dp"

        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/farbe"
        android:textColor="@color/startDatum"
        android:textSize="20sp" />

</RelativeLayout>